# rl-racing

./: .gitignore  .gitmodules  .sconsign.dblite  CMakeLists.txt  README.md  Sconstruct  config.json  graph.py  project.godot  run  show_agents.py  show_average.py  spa-francorchamps.jpg~
.import/: car.png-021a5d1fff5494b94b6d2dc9f132616d.md5  car.png-b2ca7bee34d0a72d15f9ed0bc2f7996f.stex  spa-francorchamps.jpg-31302ae9441108aad30539f88354ad7e.md5  spa-francorchamps.jpg-ffdcbfc7fe1060186c3d8d7409ed03db.stex  speedometer.jpg-ef4d5e57ad4721ac5a24347e968fa935.md5  steering_wheel.png-402ac16454bbdf1c19f86a293eae96f4.md5  steering_wheel.png-402ac16454bbdf1c19f86a293eae96f4.stex  track.jpg-4ee8e7493dbed5457976dc8814fa5542.md5  track.jpg-4ee8e7493dbed5457976dc8814fa5542.stex  track_2.png-ab5fa57bc6121af804598ba9f59ed7ba.stex  track_2.png-e7c18376b4ac3ac8830e65763fa7cb89.md5  wh.jpg-f083ebd21753061d3760506166021da7.md5  wheel.jpg-22d5eef25715d663fd3ffa370a35e2d6.md5  wheel.jpg-22d5eef25715d663fd3ffa370a35e2d6.stex  wheel.png-38930538759529989e357ad5e7dc5614.md5
graphs/: notes.txt
runs/: alt-ai  main-ai
save/: model  target
saves/: ai_version_1.txt  ai_version_2_part_1.txt  ai_version_2_part_2.txt  optimal_1.txt
scenes/: agent.tscn  ai-alt.tscn  ai.tscn  car.tscn  main-alt.tscn  main.tscn  player.tscn  playground.tscn  spawn-point.tscn  spawn.tscn  test.tscn  track.tscn  track1.tscn  track2.tscn  track3.tscn  trail.tscn
scripts/: Info.gd  PG_Speed.gd  PGsteering_wheel.gd  ProgressBar.gd  acceleration.gd  ai-alt.gd  ai.gd  car.gd  counter.gd  env.gd  label.gd  left.gd  master-alt.gd  master.gd  network.gd  right.gd  root.gd  sensor.gd  spawn.gd  steering_wheel.gd  test_root.gd  trail.gd
source/: agent.cpp  agent.hpp  (+9 more)
(+19 files in other folders)
